No bug - Remove MaxPermSize usage