@@ -37,7 +37,7 @@
 				<configuration>
 					<useUIHarness>false</useUIHarness>
 					<useUIThread>false</useUIThread>
-					<argLine>-Xmx512m -XX:MaxPermSize=256m ${test.vmargs} ${test.proxy} ${tycho.testArgLine} -Dfile.encoding=UTF-8</argLine>
+					<argLine>-Xmx512m ${test.vmargs} ${test.proxy} ${tycho.testArgLine} -Dfile.encoding=UTF-8</argLine>
 					<dependencies>
 						<dependency>
 							<type>p2-installable-unit</type>
